--- a/todo.html
+++ b/todo.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>To Do</title>
+    <title>Visitor Feedback</title>
     <script src="https://code.jquery.com/jquery-2.2.0.js" charset="utf-8"></script>
     <script src="todo.js" charset="utf-8"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <bgcolor="#ffe5ff">
   </head>
 
   <body>
@@ -14,7 +15,7 @@
 
       <div class="page-header">
         <h1>
-          To Do
+          Visitor Feedback
           <small><span class="total">0 items</span></small>
           <a class="btn btn-primary" href="#">Add Item</a>
         </h1>
