--- a/todo.html
+++ b/todo.html
@@ -16,14 +16,14 @@
       <div class="page-header">
         <h1>
           Visitor Feedback
-          <small><span class="total">0 items</span></small>
-          <a class="btn btn-primary" href="#">Add Item</a>
+          <small><span class="total">0 comments</span></small>
+          <a class="btn btn-primary" href="#">"Add Comment"</a>
         </h1>
       </div>
 
       <div class="row">
         <div class="col-md-12">
-          <ol class="todo-list">
+          <ol class="comment-list">
 
           </ol>
         </div>
