--- a/todo.html
+++ b/todo.html
@@ -17,7 +17,7 @@
         <h1>
           Visitor Feedback
           <small><span class="total">0 comments</span></small>
-          <a class="btn btn-primary" href="#">"Add Comment"</a>
+          <a class="btn btn-primary" href="#">Add Comment</a>
         </h1>
       </div>
 
