--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <li role="presentation"><a href="#YS">Yellowstone</a></li>
     <li role="presentation"><a href="#Cruise">Cruise</a></li>
     <li role="presentation"><a href="#Hawaii">Hawaii</a></li>
-    <!-- <li role="presentation"><a href="#Future">Future Plans</a></li> -->
+    <li role="presentation"><a href="#Future">Future Plans</a></li>
     <li role="presentation"><a href="todo.html">Visitor Feedback</a></li>
   </ul>
   </div>
