container nav on todo

--- a/todo.html
+++ b/todo.html
@@ -12,6 +12,19 @@
   <body>
 
     <div class="container">
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <ul class="nav nav-tabs">
+        <li role="presentation" class="active"><a href="#Welcome">Welcome</a></li>
+        <li role="presentation"><a href="#YS">Yellowstone</a></li>
+        <li role="presentation"><a href="#Cruise">Cruise</a></li>
+        <li role="presentation"><a href="#Hawaii">Hawaii</a></li>
+        <li role="presentation"><a href="#Future">Future Plans</a></li>
+        <li role="presentation"><a href="todo.html">Visitor Feedback</a></li>
+      </ul>
+    </nav>
+    </div>
+
+    <div class="container">
 
       <div class="page-header">
         <h1>
