--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCtype html>
 <html>
   <head>
-    <title>Stephanie Explores Earth</title>
+    <title>Welcome to Stephanie Explores Earth</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,7 +26,7 @@
 
 <nav class="navbar navbar-default navbar-fixed-top">
   <ul class="nav nav-tabs">
-    <li role="presentation" class="active"><a href="#Welcome">Welcome</a></li>
+    <li role="presentation" class="active"><a href="index.html">Welcome</a></li>
     <li role="presentation"><a href="#YS">Yellowstone</a></li>
     <li role="presentation"><a href="#Cruise">Cruise</a></li>
     <li role="presentation"><a href="#Hawaii">Hawaii</a></li>
