--- a/todo.html
+++ b/todo.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>Visitor Feedback</title>
-    <body bgcolor="#ffe5ff">
     <script src="https://code.jquery.com/jquery-2.2.0.js" charset="utf-8"></script>
     <script src="todo.js" charset="utf-8"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -14,7 +13,7 @@
     <div class="container">
     <nav class="navbar navbar-default navbar-fixed-top">
       <ul class="nav nav-tabs">
-        <li role="presentation" class="active"><a href="#Welcome">Welcome</a></li>
+        <li role="presentation" class="active"><a href="index.html">Welcome</a></li>
         <li role="presentation"><a href="#YS">Yellowstone</a></li>
         <li role="presentation"><a href="#Cruise">Cruise</a></li>
         <li role="presentation"><a href="#Hawaii">Hawaii</a></li>
