--- a/todo.html
+++ b/todo.html
@@ -13,7 +13,7 @@
     <div class="container">
     <nav class="navbar navbar-default navbar-fixed-top">
       <ul class="nav nav-tabs">
-        <li role="presentation" class="active"><a href="index.html">Welcome</a></li>
+        <li role="presentation"><a href="index.html">Welcome</a></li>
         <li role="presentation"><a href="#YS">Yellowstone</a></li>
         <li role="presentation"><a href="#Cruise">Cruise</a></li>
         <li role="presentation"><a href="#Hawaii">Hawaii</a></li>
