--- a/usa.html
+++ b/usa.html
@@ -1,14 +1,13 @@
 <!DOCtype html>
 <html>
   <head>
-    <title>Welcome to Stephanie Explores Earth</title>
+    <title>Stephanie Explores USA</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.js"></script>
-    <body bgcolor="#b3ffeb">
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
 
@@ -16,8 +15,8 @@
     <center>
     <div class="header">
       <br/><br/>
-          <img src="Stephanie Travels Header.jpg" class="img-responsive" alt="Responsive image">
-          <h1>Stephanie Explores Earth</h1>
+          <img src="flaggif.gif" class="img-responsive" alt="Responsive image">
+          <h1>Stephanie Explores USA</h1>
           <h2>My Adventure Travel Blog</h2>
     </center>
     </div>
