--- a/todo.html
+++ b/todo.html
@@ -14,10 +14,10 @@
     <nav class="navbar navbar-default navbar-fixed-top">
       <ul class="nav nav-tabs">
         <li role="presentation"><a href="index.html">Welcome</a></li>
-        <li role="presentation"><a href="#YS">Yellowstone</a></li>
-        <li role="presentation"><a href="#Cruise">Cruise</a></li>
-        <li role="presentation"><a href="#Hawaii">Hawaii</a></li>
-        <li role="presentation"><a href="#Future">Future Plans</a></li>
+        <li role="presentation"><a href="usa.html">USA</a></li>
+        <li role="presentation"><a href="caribbean.html">Caribbean</a></li>
+        <li role="presentation"><a href="europe.html">Europe</a></li>
+        <li role="presentation"><a href="future.html">Future Plans</a></li>
         <li role="presentation"><a href="todo.html">Visitor Feedback</a></li>
       </ul>
     </nav>
