--- a/usa.html
+++ b/usa.html
@@ -35,15 +35,14 @@
 </nav>
 </div>
 
-  <a name="Welcome"></a>
+  <a name="USA Intro"></a>
   <br/><br/>
-  <h3>Welcome!</h3></a>
+  <h3>Seeking 50: Pursuing my dream of visiting every state!</h3></a>
   <p>
-    Thanks for visiting my blog!
-    Here I will document some of my amazing travels across the globe.
-    I have visited 2 continents, 14 countries and 22 US states.
+    I love the country where I was born, these great United States.
+    I have visited 22 US states, and hope to eventually see all 50 of them.
+    I feel particularly comfortable while traveling in my home country and am always quite relaxed on these trips.
     Below, you will find some of my favorite memories, sorted by most recent first.
-    My husband Frank is my favorite travel partner, so you will definitely see mention of him.
     Enjoy!
   </p>
 
