--- a/caribbean.html
+++ b/caribbean.html
@@ -1,7 +1,7 @@
 <!DOCtype html>
 <html>
   <head>
-    <title>Welcome to Stephanie Explores Earth</title>
+    <title>Stephanie Explores the Caribbean</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,8 +16,8 @@
     <center>
     <div class="header">
       <br/><br/>
-          <img src="Stephanie Travels Header.jpg" class="img-responsive" alt="Responsive image">
-          <h1>Stephanie Explores Earth</h1>
+          <img src="pirates.gif" class="img-responsive" alt="Responsive image">
+          <h1>Stephanie Explores the Caribbean</h1>
           <h2>My Adventure Travel Blog</h2>
     </center>
     </div>
@@ -36,46 +36,48 @@
 </nav>
 </div>
 
-  <a name="Welcome"></a>
+<div class="container">
+  <a name="Caribbean Intro"></a>
   <br/><br/>
-  <h3>Welcome!</h3></a>
+  <h3>Aruba, Jamaica, ooh I wanna take ya!</h3></a>
   <p>
-    Thanks for visiting my blog!
-    Here I will document some of my amazing travels across the globe.
-    I have visited 2 continents, 14 countries and 22 US states.
-    Below, you will find some of my favorite memories, sorted by most recent first.
-    My husband Frank is my favorite travel partner, so you will definitely see mention of him.
-    Enjoy!
+    There's something very special about the Caribbean.
+    Frank and I have visited 9 islands there: Cozumel, Grand Cayman, Jamaica, Turks & Caicos, Bahamas, St. Thomas, Antigua, Barbados, Tortola.
+    Surprisingly, they are all very different, but have a common tropical theme.
+    You can't grow tired of the islands, no matter how hard you try :-).
+    We visited all of these islands by cruise. Cruises are such a great way to vacation!
   </p>
 
     <div class="alert alert-info" role="alert">NOTE: Clicking a link button will open the page in a new tab.</div>
+</div>
 
-
+<div class="container">
   <div class="row">
     <div class="col-sm-6">
-      <a name="YS"></a>
-        <br/><br/>
-      <h3>Yellowstone National Park</h3>
-      <p>
-        In September 2015, we took the road trip of a lifetime out to <a class="btn btn-primary btn-xs"href="http://www.nps.gov/yell/index.htm"target="_blank"role="button">Yellowstone National Park</a> in western Wyoming.
-        We left a piece of our hearts there; it is truly a special place, and we hope to visit it again some day.
-        This picture was taken while visiting Grand Canyon of the Yellowstone, one of many spectacular sites we saw!<br/>
-          <img src="YS.jpg"class="img-responsive" alt="Responsive image">
-      </p><br/>
-    </div>
-
-    <div class="col-sm-6">
-      <a name="Cruise"></a>
+      <a name="Cruise 2014"></a>
       <br/><br/>
-      <h3>Carnival Cruise - Turks & Caicos and the Bahamas</h3>
+      <h3>Carnival Cruise 2014 - Turks & Caicos and the Bahamas</h3>
       <p>
-        Frank and I love cruising! In May 2014, we took our third cruise together, to celebrate our 1-year wedding anniversary.
+        In May 2014, we took our third cruise together, to celebrate our 1-year wedding anniversary.
         We became scuba certified on this trip, since we love diving, and wanted to go deeper than ever before.
         We dove <a class="btn btn-primary btn-xs"href="http://www.carnival.com/shore-excursions/grand-turk/certified-scuba-440006#"target="_blank"role="button">"The Wall" in Turks & Caicos</a>, an exhilerating, world-renowned dive feautring a wall of coral that drops down 7,000 feet.
         Fortunately, we only dove to 90 feet, which was plenty of excitement for us!
         We saw nurse sharks, sea turtles, baracudas, and plenty of colorful fish and coral.<br/>
           <img src="Scuba.jpg"class="img-responsive" alt="Responsive image">
       </p><br/>
+    </div>
+
+    <div class="col-sm-6">
+      <a name="Cruise 2012"></a>
+      <br/><br/>
+      <h3>Princess Cruise 2012 - St. Thomas, Barbados, Antigua, Tortola</h3>
+      <p>
+        In January 2012, we took our second cruise together, which Frank's family.
+        We dove in St. Thomas, and did a beach day in Antigua.
+        My favorite memory from this cruise was swinging from a rope off of a pirate ship into the ocean in Barbados.
+        It was a <a class="btn btn-primary btn-xs" href="http://www.funbarbados.com/tours/jollyroger.cfm"target="_blank" role="button">Jolly Roger 1 tour</a></p><br/>
+        Here is a quick video of some friendly rooster chicks on Tortola.
+        <iframe width="500" height="315" src="https://www.youtube.com/embed/KnlUtZz6BQ4" frameborder="0" allowfullscreen></iframe>
     </div>
   </div>
 
@@ -117,7 +119,7 @@
   </p>
 
     <center>
-      <iframe src="https://www.youtube.com/embed/5WfNeijoj3k" frameborder="0" width=350 height=250 allowfullscreen></iframe>
+      <iframe src="https://www.facebook.com/slflosi/videos/10100101592724381/" frameborder="0" width=350 height=250 allowfullscreen></iframe>
     </center><br/><br/><br/><br/>
   </div>
   </div>
