--- a/index.html
+++ b/index.html
@@ -63,22 +63,10 @@
           <img src="YS.jpg"class="img-responsive" alt="Responsive image">
       </p><br/>
     </div>
-
-    <div class="col-sm-6">
-      <a name="Cruise"></a>
-      <br/><br/>
-      <h3>Carnival Cruise - Turks & Caicos and the Bahamas</h3>
-      <p>
-        Frank and I love cruising! In May 2014, we took our third cruise together, to celebrate our 1-year wedding anniversary.
-        We became scuba certified on this trip, since we love diving, and wanted to go deeper than ever before.
-        We dove <a class="btn btn-primary btn-xs"href="http://www.carnival.com/shore-excursions/grand-turk/certified-scuba-440006#"target="_blank"role="button">"The Wall" in Turks & Caicos</a>, an exhilerating, world-renowned dive feautring a wall of coral that drops down 7,000 feet.
-        Fortunately, we only dove to 90 feet, which was plenty of excitement for us!
-        We saw nurse sharks, sea turtles, baracudas, and plenty of colorful fish and coral.<br/>
-          <img src="Scuba.jpg"class="img-responsive" alt="Responsive image">
-      </p><br/>
-    </div>
   </div>
 
+  <div class="row">
+    <div class="col-sm-6">
       <a name="Hawaii"></a>
       <br/><br/>
       <h3>Hawaii - Our Honeymoon on Maui and Kauai</h3>
@@ -87,6 +75,9 @@
         Two days after our wedding in May 2013, we departed for 2 weeks on Maui and Kauai.
         We did more adventure activity on Maui, and more relaxation on Kauai, which was a perfect balance for a perfect trip.
         It is a very special place, and Chicago could use some serious Aloha!
+    </div>
+  </div>
+
         <div class="row">
           <div class="col-sm-6">
             <ul>
