--- a/usa.html
+++ b/usa.html
@@ -35,6 +35,7 @@
 </nav>
 </div>
 
+<div class="container">
   <a name="USA Intro"></a>
   <br/><br/>
   <h3>Seeking 50: Pursuing my dream of visiting every state!</h3></a>
@@ -43,85 +44,61 @@
     I have visited 22 US states, and hope to eventually see all 50 of them.
     I feel particularly comfortable while traveling in my home country and am always quite relaxed on these trips.
     Below, you will find some of my favorite memories, sorted by most recent first.
-    Enjoy!
   </p>
 
     <div class="alert alert-info" role="alert">NOTE: Clicking a link button will open the page in a new tab.</div>
 
 
-  <div class="row">
-    <div class="col-sm-6">
+    <div class="container">
+      <div class="row">
       <a name="YS"></a>
+          <br/><br/>
+        <h3>Yellowstone National Park</h3>
+        <p>
+          In September 2015, we took the road trip of a lifetime out to <a class="btn btn-primary btn-xs"href="http://www.nps.gov/yell/index.htm"target="_blank"role="button">Yellowstone National Park</a> in western Wyoming.
+          We left a piece of our hearts there; it is truly a special place, and we hope to visit it again some day.
+          This picture was taken while visiting Grand Canyon of the Yellowstone, one of many spectacular sites we saw!<br/>
+            <img src="YS.jpg"class="img-responsive" alt="Responsive image">
+        </p><br/>
+      </div>
+    </div>
+
+    <div class="container">
+    <div class="row">
+        <a name="Hawaii"></a>
         <br/><br/>
-      <h3>Yellowstone National Park</h3>
-      <p>
-        In September 2015, we took the road trip of a lifetime out to <a class="btn btn-primary btn-xs"href="http://www.nps.gov/yell/index.htm"target="_blank"role="button">Yellowstone National Park</a> in western Wyoming.
-        We left a piece of our hearts there; it is truly a special place, and we hope to visit it again some day.
-        This picture was taken while visiting Grand Canyon of the Yellowstone, one of many spectacular sites we saw!<br/>
-          <img src="YS.jpg"class="img-responsive" alt="Responsive image">
-      </p><br/>
-    </div>
+        <h3>Hawaii - Our Honeymoon on Maui and Kauai</h3>
+        <p>
+          We had both never been to Hawaii before, so it was an easy choice when deciding where to Honeymoon.
+          Two days after our wedding in May 2013, we departed for 2 weeks on Maui and Kauai.
+          We did more adventure activity on Maui, and more relaxation on Kauai, which was a perfect balance for a perfect trip.
+          It is a very special place, and Chicago could use some serious Aloha!
+        </p>
+      </div>
 
-    <div class="col-sm-6">
-      <a name="Cruise"></a>
-      <br/><br/>
-      <h3>Carnival Cruise - Turks & Caicos and the Bahamas</h3>
-      <p>
-        Frank and I love cruising! In May 2014, we took our third cruise together, to celebrate our 1-year wedding anniversary.
-        We became scuba certified on this trip, since we love diving, and wanted to go deeper than ever before.
-        We dove <a class="btn btn-primary btn-xs"href="http://www.carnival.com/shore-excursions/grand-turk/certified-scuba-440006#"target="_blank"role="button">"The Wall" in Turks & Caicos</a>, an exhilerating, world-renowned dive feautring a wall of coral that drops down 7,000 feet.
-        Fortunately, we only dove to 90 feet, which was plenty of excitement for us!
-        We saw nurse sharks, sea turtles, baracudas, and plenty of colorful fish and coral.<br/>
-          <img src="Scuba.jpg"class="img-responsive" alt="Responsive image">
-      </p><br/>
-    </div>
-  </div>
-
-      <a name="Hawaii"></a>
-      <br/><br/>
-      <h3>Hawaii - Our Honeymoon on Maui and Kauai</h3>
-      <p>
-        We had both never been to Hawaii before, so it was an easy choice when deciding where to Honeymoon.
-        Two days after our wedding in May 2013, we departed for 2 weeks on Maui and Kauai.
-        We did more adventure activity on Maui, and more relaxation on Kauai, which was a perfect balance for a perfect trip.
-        It is a very special place, and Chicago could use some serious Aloha!
-        <div class="row">
-          <div class="col-sm-6">
-            <ul>
-              <li>Here we are at a sunset dinner on Maui at the <a class="btn btn-primary btn-xs" href="http://www.fourseasons.com/maui/dining/restaurants/ferraros_bar_e_ristorante"target="_blank" role="button">Four Seasons</a>.
-                It was so perfect!
-                I will never forget it.</li></ul><br/>
-                <img src="Maui.jpg"class="img-responsive" alt="Responsive image"><br/><br/>
-          </div>
-          <div class="col-sm-6">
-            <ul>
-              <li>Here we are exploring the famous <a class="btn btn-primary btn-xs" href="http://www.napali.com/coast/"target="_blank"role="button">Napali Coast</a> by boat on Kauai.
-                It was the last night of our Honeymoon before heading back to Chicago.
-                After all this beauty, we sure could have used one more day!</li></ul>
-              <img src="Kauai.jpg"class="img-responsive" alt="Responsive image">
-            </p><br/>
+          <div class="row">
+            <div class="col-sm-6">
+              <ul>
+                <li>Here we are at a sunset dinner on Maui at the <a class="btn btn-primary btn-xs" href="http://www.fourseasons.com/maui/dining/restaurants/ferraros_bar_e_ristorante"target="_blank" role="button">Four Seasons</a>.
+                  It was so perfect!
+                  I will never forget it.</li></ul><br/>
+                  <img src="Maui.jpg"class="img-responsive" alt="Responsive image"><br/><br/>
+            </div>
+            <div class="col-sm-6">
+              <ul>
+                <li>Here we are exploring the famous <a class="btn btn-primary btn-xs" href="http://www.napali.com/coast/"target="_blank"role="button">Napali Coast</a> by boat on Kauai.
+                  It was the last night of our Honeymoon before heading back to Chicago.
+                  After all this beauty, we sure could have used one more day!</li></ul>
+                <img src="Kauai.jpg"class="img-responsive" alt="Responsive image">
+              </p><br/>
+            </div>
           </div>
         </div>
-
-  <div class="row">
-    <div class="col-sm-12">
-      <a name="Future"></a>
-      <br/><br/>
-      <h3>What's next?</h3>
-      <p>
-        Our next stop? We hope to visit Portland, Maine in Fall 2016!
-        We have recenly become curious about this mysterious state, and exploring nature there.
-        Perhaps we'll go white water rafting too!<br/>
-  </p>
-
-    <center>
-      <iframe src="https://www.youtube.com/embed/5WfNeijoj3k" frameborder="0" width=350 height=250 allowfullscreen></iframe>
-    </center><br/><br/><br/><br/>
-  </div>
-  </div>
+      </div>
 
 <!-- Footer -->
-
-  <p>Last updated: January 18, 2016</p>
+  <div class="container">
+    <p>Last updated: February 10, 2016</p>
+  </div>
  </body>
 </html>
