--- a/caribbean.html
+++ b/caribbean.html
@@ -81,51 +81,25 @@
     </div>
   </div>
 
-      <a name="Hawaii"></a>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6">
+      <a name="Cruise 2010"></a>
       <br/><br/>
-      <h3>Hawaii - Our Honeymoon on Maui and Kauai</h3>
+      <h3>Carnival Cruise 2010 - Cozumel, Grand Cayman, Jamaica</h3>
       <p>
-        We had both never been to Hawaii before, so it was an easy choice when deciding where to Honeymoon.
-        Two days after our wedding in May 2013, we departed for 2 weeks on Maui and Kauai.
-        We did more adventure activity on Maui, and more relaxation on Kauai, which was a perfect balance for a perfect trip.
-        It is a very special place, and Chicago could use some serious Aloha!
-        <div class="row">
-          <div class="col-sm-6">
-            <ul>
-              <li>Here we are at a sunset dinner on Maui at the <a class="btn btn-primary btn-xs" href="http://www.fourseasons.com/maui/dining/restaurants/ferraros_bar_e_ristorante"target="_blank" role="button">Four Seasons</a>.
-                It was so perfect!
-                I will never forget it.</li></ul><br/>
-                <img src="Maui.jpg"class="img-responsive" alt="Responsive image"><br/><br/>
-          </div>
-          <div class="col-sm-6">
-            <ul>
-              <li>Here we are exploring the famous <a class="btn btn-primary btn-xs" href="http://www.napali.com/coast/"target="_blank"role="button">Napali Coast</a> by boat on Kauai.
-                It was the last night of our Honeymoon before heading back to Chicago.
-                After all this beauty, we sure could have used one more day!</li></ul>
-              <img src="Kauai.jpg"class="img-responsive" alt="Responsive image">
-            </p><br/>
-          </div>
-        </div>
+        In 2010, Frank and I went on our very first cruise together.
+        Carnival has been our favorite cruise line ever since.
+        <br/><br/>
+        Here we are climbing Dunn's River Falls in Ocho Rios, Jamaica. Such a fun day!</p>
+        <img src="dunns.jpg" class="img-responsive" alt="responsive image">
+    </div></div></div></div></div>
 
-  <div class="row">
-    <div class="col-sm-12">
-      <a name="Future"></a>
-      <br/><br/>
-      <h3>What's next?</h3>
-      <p>
-        Our next stop? We hope to visit Portland, Maine in Fall 2016!
-        We have recenly become curious about this mysterious state, and exploring nature there.
-        Perhaps we'll go white water rafting too!<br/>
-  </p>
-
-    <center>
-      <iframe src="https://www.facebook.com/slflosi/videos/10100101592724381/" frameborder="0" width=350 height=250 allowfullscreen></iframe>
-    </center><br/><br/><br/><br/>
-  </div>
-  </div>
 
 <!-- Footer -->
-
-  <p>Last updated: January 18, 2016</p>
+    <br/><br/>
+      <div class="container"
+    <p>Last updated: February 10, 2016</p>
+  </div>
  </body>
 </html>
