video sizing playing around

--- a/todo.html
+++ b/todo.html
@@ -6,6 +6,7 @@
     <script src="https://code.jquery.com/jquery-2.2.0.js" charset="utf-8"></script>
     <script src="todo.js" charset="utf-8"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
   <body>
@@ -23,11 +24,11 @@
     </nav>
     </div>
     <br/><br/>
-    
+
     <div class="container">
       <div class="page-header">
         <h1>
-          Visitor Feedback
+          <br/> Visitor Feedback <br/>
           <small><span class="total">0 comments</span></small>
           <a class="btn btn-primary pull-right" href="#">Add Comment</a>
         </h1>
