--- a/caribbean.html
+++ b/caribbean.html
@@ -15,7 +15,7 @@
   <body>
     <center>
     <div class="header">
-      <br/><br/>
+      <br/><br/><br/>
           <img src="pirates.gif" class="img-responsive" alt="Responsive image">
           <h1>Stephanie Explores the Caribbean</h1>
           <h2>My Adventure Travel Blog</h2>
@@ -77,7 +77,7 @@
         My favorite memory from this cruise was swinging from a rope off of a pirate ship into the ocean in Barbados.
         It was a <a class="btn btn-primary btn-xs" href="http://www.funbarbados.com/tours/jollyroger.cfm"target="_blank" role="button">Jolly Roger 1 tour</a></p><br/>
         Here is a quick video of some friendly rooster chicks on Tortola.
-        <iframe width="350" height="315" src="https://www.youtube.com/embed/KnlUtZz6BQ4" frameborder="0" allowfullscreen></iframe>
+        <p><iframe src="https://www.youtube.com/embed/KnlUtZz6BQ4" frameborder="0" allowfullscreen></iframe></p>
     </div>
   </div>
 
