--- a/caribbean.html
+++ b/caribbean.html
@@ -77,7 +77,7 @@
         My favorite memory from this cruise was swinging from a rope off of a pirate ship into the ocean in Barbados.
         It was a <a class="btn btn-primary btn-xs" href="http://www.funbarbados.com/tours/jollyroger.cfm"target="_blank" role="button">Jolly Roger 1 tour</a></p><br/>
         Here is a quick video of some friendly rooster chicks on Tortola.
-        <p><iframe src="https://www.youtube.com/embed/KnlUtZz6BQ4" frameborder="0" allowfullscreen></iframe></p>
+        <iframe src="https://www.youtube.com/embed/KnlUtZz6BQ4" frameborder="0" allowfullscreen></iframe>
     </div>
   </div>
 
