--- a/europe.html
+++ b/europe.html
@@ -1,14 +1,13 @@
 <!DOCtype html>
 <html>
   <head>
-    <title>Welcome to Stephanie Explores Earth</title>
+    <title>Stephanie Explores Europe</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.js"></script>
-    <body bgcolor="#b3ffeb">
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
 
@@ -16,8 +15,8 @@
     <center>
     <div class="header">
       <br/><br/>
-          <img src="Stephanie Travels Header.jpg" class="img-responsive" alt="Responsive image">
-          <h1>Stephanie Explores Earth</h1>
+          <img src="europe.gif" class="img-responsive" alt="Responsive image">
+          <h1>Stephanie Explores Europe</h1>
           <h2>My Adventure Travel Blog</h2>
     </center>
     </div>
@@ -36,16 +35,14 @@
 </nav>
 </div>
 
-  <a name="Welcome"></a>
+  <a name="Europe Intro"></a>
   <br/><br/>
-  <h3>Welcome!</h3></a>
+  <h3>Ciao! Guten Tag! Zdravo!</h3></a>
   <p>
-    Thanks for visiting my blog!
-    Here I will document some of my amazing travels across the globe.
-    I have visited 2 continents, 14 countries and 22 US states.
-    Below, you will find some of my favorite memories, sorted by most recent first.
-    My husband Frank is my favorite travel partner, so you will definitely see mention of him.
-    Enjoy!
+    I have visited Europe twice, and seen 3 countries: Italy, Germany and Croatia!
+    I truly enjoyed all 3 countries; it is hard to pick a favorite.
+    They are all special for different reasons.
+    I visited Italy in Winter 2008 and Germany/Croatia in Summer 2012.
   </p>
 
     <div class="alert alert-info" role="alert">NOTE: Clicking a link button will open the page in a new tab.</div>
@@ -53,15 +50,17 @@
 
   <div class="row">
     <div class="col-sm-6">
-      <a name="YS"></a>
+      <a name="Croatia"></a>
         <br/><br/>
-      <h3>Yellowstone National Park</h3>
+      <h3>Dubrovnik, Croatia</h3>
       <p>
-        In September 2015, we took the road trip of a lifetime out to <a class="btn btn-primary btn-xs"href="http://www.nps.gov/yell/index.htm"target="_blank"role="button">Yellowstone National Park</a> in western Wyoming.
-        We left a piece of our hearts there; it is truly a special place, and we hope to visit it again some day.
-        This picture was taken while visiting Grand Canyon of the Yellowstone, one of many spectacular sites we saw!<br/>
-          <img src="YS.jpg"class="img-responsive" alt="Responsive image">
-      </p><br/>
+        In Summer 2012, I traveled to Europe for the second time to visit my friend Ramina who was living in Berlin at the time.
+        During my visit, we took a 5-day trip to <a class="btn btn-primary btn-xs"href="http://wikitravel.org/en/Dubrovnik"target="_blank"role="button">Dubrovnik, Croatia</a>, a city that Ramina always wanted to visit, so I agreed to tag along.
+        And I'm so glad that I did. What a gorgeous city! We rented a little apartment against the hillside, and took a 30 minute walk downtown everyday.
+        We didn't mind because it was brutally hot that July and we needed 2-double scoop gelatos a day in order to stay cool.</p>
+
+        <p>The highlight of Croatia was cliff diving on the beautiful island of Lokrum. Here is a video showing just how crazy I was!
+        <iframe width="420" height="315" src="https://www.youtube.com/embed/HHYbJv6rWqc" frameborder="0" allowfullscreen></iframe></p>
     </div>
 
     <div class="col-sm-6">
