--- a/usa.html
+++ b/usa.html
@@ -15,7 +15,7 @@
     <center>
     <div class="header">
       <br/><br/>
-          <img src="flaggif.gif" class="img-responsive" alt="Responsive image">
+          <img src="USA.gif" class="img-responsive" alt="Responsive image">
           <h1>Stephanie Explores USA</h1>
           <h2>My Adventure Travel Blog</h2>
     </center>
