--- a/caribbean.html
+++ b/caribbean.html
@@ -91,7 +91,7 @@
         In 2010, Frank and I went on our very first cruise together.
         Carnival has been our favorite cruise line ever since.
         <br/><br/>
-        Here we are climbing Dunn's River Falls in Ocho Rios, Jamaica. Such a fun day!</p>
+        Here we are climbing <a class="btn btn-primary btn-xs" href="http://www.dunnsriverfallsja.com/"target="_blank" role="button">Dunn's River Falls</a> in Ocho Rios, Jamaica. Such a fun day!</p>
         <img src="dunns.jpg" class="img-responsive" alt="responsive image">
     </div></div></div></div></div>
 
