--- a/future.html
+++ b/future.html
@@ -16,7 +16,7 @@
     <center>
     <div class="header">
       <br/><br/>
-          <img src="Stephanie Travels Header.jpg" class="img-responsive" alt="Responsive image">
+          <img src="future.gif" class="img-responsive" alt="Responsive image">
           <h1>Stephanie Explores Earth</h1>
           <h2>My Adventure Travel Blog</h2>
     </center>
