--- a/europe.html
+++ b/europe.html
@@ -60,69 +60,44 @@
         We didn't mind because it was brutally hot that July and we needed 2-double scoop gelatos a day in order to stay cool.</p>
 
         <p>The highlight of Croatia was cliff diving on the beautiful island of Lokrum. Here is a video showing just how crazy I was!
-        <iframe width="420" height="315" src="https://www.youtube.com/embed/HHYbJv6rWqc" frameborder="0" allowfullscreen></iframe></p>
+        <center><iframe src="https://www.youtube.com/embed/HHYbJv6rWqc" width=300 height=231 frameborder="0" allowfullscreen></iframe></p></center>
     </div>
 
     <div class="col-sm-6">
-      <a name="Cruise"></a>
+      <a name="Germany"></a>
       <br/><br/>
-      <h3>Carnival Cruise - Turks & Caicos and the Bahamas</h3>
+      <h3>Berlin, Germany</h3>
       <p>
-        Frank and I love cruising! In May 2014, we took our third cruise together, to celebrate our 1-year wedding anniversary.
-        We became scuba certified on this trip, since we love diving, and wanted to go deeper than ever before.
-        We dove <a class="btn btn-primary btn-xs"href="http://www.carnival.com/shore-excursions/grand-turk/certified-scuba-440006#"target="_blank"role="button">"The Wall" in Turks & Caicos</a>, an exhilerating, world-renowned dive feautring a wall of coral that drops down 7,000 feet.
-        Fortunately, we only dove to 90 feet, which was plenty of excitement for us!
-        We saw nurse sharks, sea turtles, baracudas, and plenty of colorful fish and coral.<br/>
-          <img src="Scuba.jpg"class="img-responsive" alt="Responsive image">
+        In Summer 2012, I traveled to Europe for the second time to visit my friend Ramina who was living in Berlin at the time.
+        Germany is such a cool country and Berlin <a class="btn btn-primary btn-xs"href="https://www.tripadvisor.com/Attractions-g187323-Activities-Berlin.html"target="_blank"role="button">Berlin</a>  was a very exciting city.
+        We visited plenty of World War II memorials, including Hitler's bunker! Also, seeing the Berlin Wall was a real treat.</p>
+
+        <p>Overall my favorite thing in Germany is the Biergarten, where I enjoyed many ice cold Berliners and people-watched.
+        <center><img src="berlin.jpg" class="img-responsive" alt="Responsive image"></center>
       </p><br/>
     </div>
   </div>
 
-      <a name="Hawaii"></a>
-      <br/><br/>
-      <h3>Hawaii - Our Honeymoon on Maui and Kauai</h3>
-      <p>
-        We had both never been to Hawaii before, so it was an easy choice when deciding where to Honeymoon.
-        Two days after our wedding in May 2013, we departed for 2 weeks on Maui and Kauai.
-        We did more adventure activity on Maui, and more relaxation on Kauai, which was a perfect balance for a perfect trip.
-        It is a very special place, and Chicago could use some serious Aloha!
-        <div class="row">
-          <div class="col-sm-6">
-            <ul>
-              <li>Here we are at a sunset dinner on Maui at the <a class="btn btn-primary btn-xs" href="http://www.fourseasons.com/maui/dining/restaurants/ferraros_bar_e_ristorante"target="_blank" role="button">Four Seasons</a>.
-                It was so perfect!
-                I will never forget it.</li></ul><br/>
-                <img src="Maui.jpg"class="img-responsive" alt="Responsive image"><br/><br/>
-          </div>
-          <div class="col-sm-6">
-            <ul>
-              <li>Here we are exploring the famous <a class="btn btn-primary btn-xs" href="http://www.napali.com/coast/"target="_blank"role="button">Napali Coast</a> by boat on Kauai.
-                It was the last night of our Honeymoon before heading back to Chicago.
-                After all this beauty, we sure could have used one more day!</li></ul>
-              <img src="Kauai.jpg"class="img-responsive" alt="Responsive image">
-            </p><br/>
-          </div>
-        </div>
-
   <div class="row">
-    <div class="col-sm-12">
-      <a name="Future"></a>
+    <div class="col-sm-6">
+      <a name="Italy"></a>
       <br/><br/>
-      <h3>What's next?</h3>
-      <p>
-        Our next stop? We hope to visit Portland, Maine in Fall 2016!
-        We have recenly become curious about this mysterious state, and exploring nature there.
-        Perhaps we'll go white water rafting too!<br/>
-  </p>
+      <h3>10 Cities in 10 Days: An Italian Voyage</h3>
+      <p>During my junior year of college, my 2 close high school friends and I visited Italy through a college-student organized tour.
+        The itinerary said we'd visit 10 cities in 10 days, and that we did. In chronological order: Milan, Verona, Venice, Florence, Sienna, Assissi, Pompei, Sorrento, the Vatican, and Rome!
+        What a nutty schedule it was, but it was so awesome to see the entire country in such a short and convenient way.
+        My family roots are from Italy, so this was a very special trip for me.
+        We spent New Year's in Florence near the <a class="btn btn-primary btn-xs"href="http://www.visitflorence.com/florence-monuments/piazzale-michelangelo.html"target="_blank"role="button">Michaelangelo statue</a>, carrying a bottle of champagne in the streets along with thousands of others.
+        It was awesome! I wasn't even 21 yet! But it was perfectly legal in Italy.</p>
 
-    <center>
-      <iframe src="https://www.youtube.com/embed/5WfNeijoj3k" frameborder="0" width=350 height=250 allowfullscreen></iframe>
-    </center><br/><br/><br/><br/>
-  </div>
-  </div>
+        <p>Here is one of my favorite memories in Rome, throwing a penny into the ancient Trevi fountain
+          <center><img src="trevi.jpg" class="img-responsive" alt="Responsive image"></p></center>
+      </div>
+    </div>
+
 
 <!-- Footer -->
 
-  <p>Last updated: January 18, 2016</p>
+  <p>Last updated: February 10, 2016</p>
  </body>
 </html>
