--- a/caribbean.html
+++ b/caribbean.html
@@ -63,7 +63,7 @@
         We dove <a class="btn btn-primary btn-xs"href="http://www.carnival.com/shore-excursions/grand-turk/certified-scuba-440006#"target="_blank"role="button">"The Wall" in Turks & Caicos</a>, an exhilerating, world-renowned dive feautring a wall of coral that drops down 7,000 feet.
         Fortunately, we only dove to 90 feet, which was plenty of excitement for us!
         We saw nurse sharks, sea turtles, baracudas, and plenty of colorful fish and coral.<br/>
-          <img src="Scuba.jpg"class="img-responsive" alt="Responsive image">
+          <center><img src="Scuba.jpg"class="img-responsive" alt="Responsive image"></center>
       </p><br/>
     </div>
 
@@ -77,7 +77,7 @@
         My favorite memory from this cruise was swinging from a rope off of a pirate ship into the ocean in Barbados.
         It was a <a class="btn btn-primary btn-xs" href="http://www.funbarbados.com/tours/jollyroger.cfm"target="_blank" role="button">Jolly Roger 1 tour</a></p><br/>
         Here is a quick video of some friendly rooster chicks on Tortola.
-        <iframe src="https://www.youtube.com/embed/KnlUtZz6BQ4" frameborder="0" allowfullscreen></iframe>
+        <center><iframe src="https://www.youtube.com/embed/KnlUtZz6BQ4" width=300 height=231 frameborder="0" allowfullscreen></iframe></center>
     </div>
   </div>
 
@@ -92,7 +92,7 @@
         Carnival has been our favorite cruise line ever since.
         <br/><br/>
         Here we are climbing <a class="btn btn-primary btn-xs" href="http://www.dunnsriverfallsja.com/"target="_blank" role="button">Dunn's River Falls</a> in Ocho Rios, Jamaica. Such a fun day!</p>
-        <img src="dunns.jpg" class="img-responsive" alt="responsive image">
+        <center><img src="dunns.jpg" class="img-responsive" alt="responsive image"></center>
     </div></div></div></div></div>
 
 
