--- a/usa.html
+++ b/usa.html
@@ -58,7 +58,7 @@
           In September 2015, we took the road trip of a lifetime out to <a class="btn btn-primary btn-xs"href="http://www.nps.gov/yell/index.htm"target="_blank"role="button">Yellowstone National Park</a> in western Wyoming.
           We left a piece of our hearts there; it is truly a special place, and we hope to visit it again some day.
           This picture was taken while visiting Grand Canyon of the Yellowstone, one of many spectacular sites we saw!<br/>
-            <img src="YS.jpg"class="img-responsive" alt="Responsive image">
+            <center><img src="YS.jpg"class="img-responsive" alt="Responsive image"></center>
         </p><br/>
       </div>
     </div>
@@ -82,14 +82,14 @@
                 <li>Here we are at a sunset dinner on Maui at the <a class="btn btn-primary btn-xs" href="http://www.fourseasons.com/maui/dining/restaurants/ferraros_bar_e_ristorante"target="_blank" role="button">Four Seasons</a>.
                   It was so perfect!
                   I will never forget it.</li></ul><br/>
-                  <img src="Maui.jpg"class="img-responsive" alt="Responsive image"><br/><br/>
+                  <center><img src="Maui.jpg"class="img-responsive" alt="Responsive image"><br/><br/></center>
             </div>
             <div class="col-sm-6">
               <ul>
                 <li>Here we are exploring the famous <a class="btn btn-primary btn-xs" href="http://www.napali.com/coast/"target="_blank"role="button">Napali Coast</a> by boat on Kauai.
                   It was the last night of our Honeymoon before heading back to Chicago.
                   After all this beauty, we sure could have used one more day!</li></ul>
-                <img src="Kauai.jpg"class="img-responsive" alt="Responsive image">
+                <center><img src="Kauai.jpg"class="img-responsive" alt="Responsive image"></center>
               </p><br/>
             </div>
           </div>
